Prepping for section 1

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         </div>
       </div>
     </nav>
+    <section id="profile">
+      <div class="section__pic-container">
+        <img src="./assets/" alt="Jola Amodu Profile pic" />
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
