Hero section created and styled

--- a/index.html
+++ b/index.html
@@ -37,7 +37,63 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/" alt="Jola Amodu Profile pic" />
+        <img
+          src="./assets/headshot.png"
+          alt="Jola Amodu Profile pic"
+          class="profile-image"
+        />
+      </div>
+      <div class="section__text">
+        <p class="section__text__p1">Hello, I'm</p>
+        <h1 class="title">Jolaoluwa Amodu</h1>
+        <p class="section__text__p2">Python Developer/Software Engineer</p>
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="window.open('./assets/Jolas CV.pdf')"
+          >
+            Download CV
+          </button>
+          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+            Contact me!
+          </button>
+        </div>
+        <div id="socials-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="linkedin profile"
+            class="icon"
+            onclick="location.href='https://www.linkedin.com/in/jolaoluwa-amodu-9b9832261/'"
+          />
+          <img
+            src="./assets/github.png"
+            alt="github profile"
+            class="icon"
+            onclick="location.href='https://github.com/I-am-that-guy'"
+          />
+        </div>
+      </div>
+    </section>
+    <section id="about">
+      <p class="section__text__p1">
+        Get To Know More
+      </p>
+      <h1 class="title"></p>
+        About Me
+      </h1>
+      <div class="section-container">
+        <div class="section__pic-container">
+          <img src="./assets/Untitled.png" alt="Another profile pic" class="about-pic">
+        </div>
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <img src="./assets/experience.png" alt="experience icon" class="icon">
+              <h3>Experience</h3>
+              <!-- Add experience Here -->
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <script src="script.js"></script>
