--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Jola Amodu</div>
+      <div class="logo">
+        <img src="./assets/logo.png" alt="logo" class="logo-image">
+        <p>Jola Amodu</p>
+      </div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -20,7 +23,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">Jola Amodu</div>
+      <div class="logo"><img src="./assets/logo.png" alt="logo" class="logo-image"><p>Jola Amodu</p></div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
