--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -32,7 +32,7 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
@@ -89,11 +89,14 @@
           <img src="./assets/Untitled.png" alt="Another profile pic" class="about-pic">
         </div>
         <div class="about-details-container">
+          <p>I am currently a freshman student at Fisk University with interests in software engineering, automation and electronics. I am a Python developer with experience in website development. </p>
+          <p>I would describe myself as motivated, meticulous and inventive. I also love to connect concepts across my areas of interests to foster innovation and weave a bit of creativity into my technical work. </p>
+          <!-- <p>But I also want my work to speak for itself, so ...</p> -->
           <div class="about-containers">
             <div class="details-container">
-              <img src="./assets/experience.png" alt="experience icon" class="icon">
-              <h3>Experience</h3>
-              <!-- Add experience Here -->
+              <img src="./assets/skills.png" alt="skills icon" class="icon">
+              <h3>Skills</h3>
+              <!-- Add skills Here -->
             </div>
           </div>
         </div>
