Project section begun ...

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>
       Jola's Portfolio
     </title>
-    <link rel="icon" href="./assets/icons/logo.png" type="image/png">">
+    <link rel="icon" href="./assets/icons/logo.png" type="image/png">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -79,6 +79,7 @@
           />
         </div>
       </div>
+      <img src="./assets/icons/arrow.png" alt="arrow down" class="icon arrow" onclick="location.href='./#about'">
     </section>
     <section id="about">
       <p class="section__text__p1">
@@ -111,52 +112,92 @@
                 </div> 
                 <div class="text-container">
                   <p>I am currently a freshman student at Fisk University with interests in software engineering, automation and electronics. I am a Python developer with experience in website development. </p>
-                  <p>I would describe myself as motivated, meticulous and inventive. I also love to connect concepts across my areas of interests to foster innovation and weave a bit of creativity into my technical work. </p>
-                  <div class="skill-section">
-                    <div class="section-headers">
-                      <img src="./assets/icons/skills.png" alt="skills icon" class="icon">
-                      <h3>Skills</h3>
-                    </div>
-                    <div class="skill-box">
-                      <div class="skill-container">
-                        <img src="./assets/icons/python.png" alt="python icon from flaticon" class="skill-icon">
-                        <p class="skill-text">Python</p>
-                      </div>
-                      <div class="skill-container">
-                        <img src="./assets/icons/css-3.png" alt="css icon from flaticon" class="skill-icon">
-                        <p class="skill-text">CSS</p>
-                      </div>
-                      <div class="skill-container">
-                        <img src="./assets/icons/html.png" alt="html icon from flaticon" class="skill-icon">
-                        <p class="skill-text">HTML</p>
-                      </div>
-                      <div class="skill-container">
-                        <img src="./assets/icons/java-script.png" alt="javascript icon from flaticon" class="skill-icon">
-                        <p class="skill-text">JavaScript</p>
-                      </div>
-                      <div class="skill-container">
-                        <img src="./assets/icons/flask.png" alt="flask icon from flaticon" class="skill-icon">
-                        <p class="skill-text">Flask Framework</p>
-                      </div>
-                      <div class="skill-container">
-                        <img src="./assets/icons/c-.png" alt="c++ icon from flaticon" class="skill-icon">
-                        <p class="skill-text">C++</p>
-                      </div>
-                      <div class="skill-container">
-                        <img src="./assets/icons/figma.png" alt="figma icon from flaticon" class="skill-icon">
-                        <p class="skill-text">Figma</p>
-                      </div>
-                      <div class="skill-container">
-                        <img src="./assets/icons/git.png" alt="git icon from flaticon" class="skill-icon">
-                        <p class="skill-text">Git</p>
-                      </div>        
-                    </div>
-                     </div> 
+                  <p>I would describe myself as motivated, meticulous and inventive. I also love to connect concepts across my areas of interests to foster innovation and weave a bit of creativity into my technical work. </p> 
                 </div>
               </div>
-              </div>  
+              </div>
             </div>
-         <img src="./assets/icons/arrow.png" alt="arrow down" class="icon arrow" onclick="location.href='./experience'">   
+         <img src="./assets/icons/arrow.png" alt="arrow down" class="icon arrow" onclick="location.href='./#skills'">   
+    </section>
+    <section id="skills">
+      <div class="skill-section">
+        <div class="skill-header">
+          <p class="section__text__p1">Curious about</p>
+        <h1 class="title">My Skills?</h1>
+          <p class="mini-italic" style="margin-top: 1rem; margin-left: 5px;">(hover to learn more)</p>
+        </div>
+        <div class="skill-box">
+          <div class="skill-container">
+            <img src="./assets/icons/python.png" alt="python icon from flaticon" class="skill-icon">
+            <p class="skill-text">Python</p>
+            <p class="skill-subtext">3 years experience, Proficient💪</p>
+          </div>
+          <div class="skill-container">
+            <img src="./assets/icons/css-3.png" alt="css icon from flaticon" class="skill-icon">
+            <p class="skill-text">CSS</p>
+            <p class="skill-subtext">2 years experience, Intermediate👌</p>
+          </div>
+          <div class="skill-container">
+            <img src="./assets/icons/html.png" alt="html icon from flaticon" class="skill-icon">
+            <p class="skill-subtext">2 years experience, Intermediate👌</p>
+          </div>
+          <div class="skill-container">
+            <img src="./assets/icons/java-script.png" alt="javascript icon from flaticon" class="skill-icon">
+            <p class="skill-text">JavaScript</p>
+            <p class="skill-subtext">1 year experience, Basic👍</p>
+          </div>
+          <div class="skill-container">
+            <img src="./assets/icons/flask.png" alt="flask icon from flaticon" class="skill-icon">
+            <p class="skill-text">Flask Framework</p>
+            <p class="skill-subtext">1 year experience, Intermediate👌</p>
+          </div>
+          <div class="skill-container">
+            <img src="./assets/icons/c-.png" alt="c++ icon from flaticon" class="skill-icon">
+            <p class="skill-text">C++</p>
+            <p class="skill-subtext">1 year experience, Intermediate👌</p>
+          </div>
+          <div class="skill-container">
+            <img src="./assets/icons/figma.png" alt="figma icon from flaticon" class="skill-icon">
+            <p class="skill-text">Figma</p>
+            <p class="skill-subtext">1 year experience, Basic👍</p>
+          </div>
+          <div class="skill-container">
+            <img src="./assets/icons/git.png" alt="git icon from flaticon" class="skill-icon">
+            <p class="skill-text">Git</p>
+            <p class="skill-subtext">1 year experience, Intermediate👌</p>
+          </div>        
+        </div>
+         </div>
+      <img src="./assets/icons/arrow.png" alt="arrow down" class="icon arrow" onclick="location.href='./#projects'">
+    </section>
+    <section id="projects">
+      <p class="section__text__p1">Browse My</p>
+      <p class="title">Recent Projects</p>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="color-container">
+            <img src="./assets/icons/project1.png" alt="project-1" class="projects-img">
+            <h2 class="experience-subtitle project-title">AI Powered texteditor</h2>
+            <p class="project-text">A text editor with AI powered paraphrasing, summary and content generation</p>
+            <div class="experience-btns">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./#projects'">Live Demo</button>
+            </div>
+          </div>
+          <div class="color-container">
+            <img src="./assets/icons/project2.png" alt="project-2" class="projects-img">
+            <h2 class="experience-subtitle project-title">Interface for DJI Tello Drones</h2>
+            <p class="project-text">Drone control with 3 DoF, live video feed, image capture, face detection and tracking</p>
+            <div class="experience-btns">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./#projects'">Live Demo</button>
+            </div>
+          </div>
+          </div>
+        </div>
+        </div>
+      </div>
+      <img src="./assets/icons/arrow.png" alt="arrow down" class="icon arrow" onclick="location.href='./#projects'">
     </section>
     <script src="script.js"></script>
   </body>
