Desktop website mostly finished, working on mobile

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
           </div>
           <div class="skill-container">
             <img src="./assets/icons/html.png" alt="html icon from flaticon" class="skill-icon">
+            <p class="skill-text">HTML</p>
             <p class="skill-subtext">2 years experience, Intermediate👌</p>
           </div>
           <div class="skill-container">
@@ -193,12 +194,50 @@
               <button class="btn btn-color-2 project-btn" onclick="location.href='./#projects'">Live Demo</button>
             </div>
           </div>
+          <div class="color-container">
+            <img src="./assets/icons/project2.png" alt="project-2" class="projects-img">
+            <h2 class="experience-subtitle project-title">DJI Drones Interface</h2>
+            <p class="project-text">Drone control with 3 DoF, live video feed, image capture, face detection and tracking</p>
+            <div class="experience-btns">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./#projects'">Live Demo</button>
+            </div>
+          </div>
+          </div>
           </div>
         </div>
         </div>
       </div>
-      <img src="./assets/icons/arrow.png" alt="arrow down" class="icon arrow" onclick="location.href='./#projects'">
+      <img src="./assets/icons/arrow.png" alt="arrow down" class="icon arrow" onclick="location.href='./#contact'">
     </section>
+    <section id="contact">
+      <p class="section__text__p1">Get In Touch</p>
+      <h1 class="title">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img src="./assets/icons/email.png" alt="email icon" class="icon contact-icon email-icon">
+          <p><a href="mailto:jola47amodu@gmail.com">jola47amodu@gmail.com</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img src="./assets/icons/linkedin.png" alt="linkedin icon" class="icon contact-icon">
+          <p><a href="https://www.linkedin.com/in/jolaoluwa-amodu">LinkedIn</a></p>
+        </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2024 Jola Amodu. All Rights Reserved.</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
