Made Experience header h1, removed "hover" on mobile view

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </section>
     <section id="projects">
       <p class="section__text__p1">Browse My</p>
-      <p class="title">Recent Projects</p>
+      <h1 class="title">Recent Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="color-container">
@@ -188,15 +188,6 @@
           <div class="color-container">
             <img src="./assets/icons/project2.png" alt="project-2" class="projects-img">
             <h2 class="experience-subtitle project-title">Interface for DJI Tello Drones</h2>
-            <p class="project-text">Drone control with 3 DoF, live video feed, image capture, face detection and tracking</p>
-            <div class="experience-btns">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./#projects'">Live Demo</button>
-            </div>
-          </div>
-          <div class="color-container">
-            <img src="./assets/icons/project2.png" alt="project-2" class="projects-img">
-            <h2 class="experience-subtitle project-title">DJI Drones Interface</h2>
             <p class="project-text">Drone control with 3 DoF, live video feed, image capture, face detection and tracking</p>
             <div class="experience-btns">
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button>
